# stock-analyzer-agent

./: .gitignore  README.md  architecture.pptx  main.py  playground.ipynb  pyproject.toml  sample_output_report.md
src/: agent_graph.py  config.py  prompts.py  utils.py
src/tools/: analyst_rating.py  fundamental_analysis.py  news_analysis.py  risk_analysis.py  technical_analysis.py
